// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/GaugeCard basic 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "4rem",
        "width": "108px",
      }
    }
  >
    <div
      className="iot--card iot--gauge-card iot--card--wrapper"
      data-testid="Card"
      id="GaugeCard"
      role="presentation"
      style={
        Object {
          "--card-default-height": "144px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Health"
        >
          <div
            className="iot--card--title--text"
          >
            Health
          </div>
          <div
            className="bx--tooltip__label iot--card--header--tooltip"
            id="card-tooltip-trigger-GaugeCard"
          >
            
            <div
              className="bx--tooltip__trigger"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                description={null}
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role={null}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
                />
                <path
                  d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
                />
              </svg>
            </div>
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "96px",
          }
        }
      >
        <div
          className="iot--gauge-container"
          style={
            Object {
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 0,
              "rowGap": 0,
            }
          }
        >
          <svg
            aria-labelledby="gauge-label"
            className="iot--gauge"
            percent="0"
            style={
              Object {
                "--gauge-bg": "#e0e0e0",
                "--gauge-colors": "green",
                "--gauge-max-value": 100,
                "--gauge-size": "68px",
                "--gauge-trend-color": "",
                "--gauge-value": 81,
                "--stroke-dash": 152.68140296446393,
                "--stroke-dash-array": 188.49555921538757,
              }
            }
          >
            <circle
              className="iot--gauge-bg"
              cx={34}
              cy={34}
              r={30}
            />
            <circle
              className="iot--gauge-fg"
              cx={34}
              cy={34}
              r={30}
            />
            <text
              className="iot--gauge-value iot--gauge-value__centered iot--gauge-value-lg"
              id="gauge-label"
              textAnchor="middle"
              x={34}
              y={42}
            >
              <tspan>
                81
              </tspan>
              <tspan>
                %
              </tspan>
            </text>
          </svg>
          <div
            className="iot--gauge-trend iot--gauge-trend__up"
          >
            <p
              style={
                Object {
                  "--gauge-trend-color": "",
                }
              }
            >
              12%
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/GaugeCard basic with expand 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "4rem",
        "width": "108px",
      }
    }
  >
    <div
      className="iot--card iot--gauge-card iot--card--wrapper"
      data-testid="Card"
      id="GaugeCard"
      role="presentation"
      style={
        Object {
          "--card-default-height": "144px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Health"
        >
          <div
            className="iot--card--title--text"
          >
            Health
          </div>
          <div
            className="bx--tooltip__label iot--card--header--tooltip"
            id="card-tooltip-trigger-GaugeCard"
          >
            
            <div
              className="bx--tooltip__trigger"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                description={null}
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role={null}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
                />
                <path
                  d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
                />
              </svg>
            </div>
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="Card-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "96px",
          }
        }
      >
        <div
          className="iot--gauge-container"
          style={
            Object {
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 0,
              "rowGap": 0,
            }
          }
        >
          <svg
            aria-labelledby="gauge-label"
            className="iot--gauge"
            percent="0"
            style={
              Object {
                "--gauge-bg": "#e0e0e0",
                "--gauge-colors": "green",
                "--gauge-max-value": 100,
                "--gauge-size": "68px",
                "--gauge-trend-color": "",
                "--gauge-value": 81,
                "--stroke-dash": 152.68140296446393,
                "--stroke-dash-array": 188.49555921538757,
              }
            }
          >
            <circle
              className="iot--gauge-bg"
              cx={34}
              cy={34}
              r={30}
            />
            <circle
              className="iot--gauge-fg"
              cx={34}
              cy={34}
              r={30}
            />
            <text
              className="iot--gauge-value iot--gauge-value__centered iot--gauge-value-lg"
              id="gauge-label"
              textAnchor="middle"
              x={34}
              y={42}
            >
              <tspan>
                81
              </tspan>
              <tspan>
                %
              </tspan>
            </text>
          </svg>
          <div
            className="iot--gauge-trend iot--gauge-trend__up"
          >
            <p
              style={
                Object {
                  "--gauge-trend-color": "",
                }
              }
            >
              12%
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/GaugeCard with data state no-data 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "4rem",
        "width": "252px",
      }
    }
  >
    <div
      className="iot--card iot--gauge-card iot--card--wrapper"
      data-testid="Card"
      id="GaugeCard"
      role="presentation"
      style={
        Object {
          "--card-default-height": "144px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Health"
        >
          <div
            className="iot--card--title--text"
          >
            Health
          </div>
          <div
            className="bx--tooltip__label iot--card--header--tooltip"
            id="card-tooltip-trigger-GaugeCard"
          >
            
            <div
              className="bx--tooltip__trigger"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                description={null}
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role={null}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
                />
                <path
                  d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
                />
              </svg>
            </div>
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "96px",
          }
        }
      >
        <div
          className="iot--gauge-container"
          style={Object {}}
        >
          <div
            className="iot--data-state-container"
            style={
              Object {
                "--container-padding": "16px",
              }
            }
          >
            <p
              className="iot--data-state-dashes"
            >
              --
            </p>
            <div
              className="iot--data-state-grid"
            >
              <div
                aria-labelledby="iot--data-state-grid__icon-GaugeCard"
                className="bx--tooltip__label"
                id="iot--data-state-grid__icon-GaugeCard"
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                role="button"
                tabIndex={0}
              >
                <svg
                  aria-hidden={true}
                  className="iot--data-state-default-warning-icon"
                  fill="currentColor"
                  focusable="false"
                  height={24}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12,1C5.9,1,1,5.9,1,12s4.9,11,11,11s11-4.9,11-11C23,5.9,18.1,1,12,1z M11.1,6h1.8v8h-1.8V6z M12,19.2	c-0.7,0-1.2-0.6-1.2-1.2s0.6-1.2,1.2-1.2s1.2,0.6,1.2,1.2S12.7,19.2,12,19.2z"
                  />
                  <path
                    d="M13.2,18c0,0.7-0.6,1.2-1.2,1.2s-1.2-0.6-1.2-1.2s0.6-1.2,1.2-1.2S13.2,17.3,13.2,18z M12.9,6	h-1.8v8h1.8V6z"
                    data-icon-path="inner-path"
                    fill="none"
                    opacity="0"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "height": "150vh",
        }
      }
    />
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/GaugeCard with multiple gauges 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "4rem",
        "width": "232px",
      }
    }
  >
    <div
      className="iot--card iot--gauge-card iot--card--wrapper"
      data-testid="Card"
      id="GaugeCard"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Health"
        >
          <div
            className="iot--card--title--text"
          >
            Health
          </div>
          <div
            className="bx--tooltip__label iot--card--header--tooltip"
            id="card-tooltip-trigger-GaugeCard"
          >
            
            <div
              className="bx--tooltip__trigger"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                description={null}
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role={null}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
                />
                <path
                  d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
                />
              </svg>
            </div>
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--gauge-container"
          style={
            Object {
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 0,
              "rowGap": "1rem",
            }
          }
        >
          <svg
            aria-labelledby="gauge-label"
            className="iot--gauge"
            percent="0"
            style={
              Object {
                "--gauge-bg": "#e0e0e0",
                "--gauge-colors": "green",
                "--gauge-max-value": 100,
                "--gauge-size": "68px",
                "--gauge-trend-color": "",
                "--gauge-value": 81,
                "--stroke-dash": 152.68140296446393,
                "--stroke-dash-array": 188.49555921538757,
              }
            }
          >
            <circle
              className="iot--gauge-bg"
              cx={34}
              cy={34}
              r={30}
            />
            <circle
              className="iot--gauge-fg"
              cx={34}
              cy={34}
              r={30}
            />
            <text
              className="iot--gauge-value iot--gauge-value__centered iot--gauge-value-lg"
              id="gauge-label"
              textAnchor="middle"
              x={34}
              y={42}
            >
              <tspan>
                81
              </tspan>
              <tspan>
                %
              </tspan>
            </text>
          </svg>
          <div
            className="iot--gauge-trend iot--gauge-trend__up"
          >
            <p
              style={
                Object {
                  "--gauge-trend-color": "",
                }
              }
            >
              12%
            </p>
          </div>
          <svg
            aria-labelledby="gauge-label"
            className="iot--gauge"
            percent="0"
            style={
              Object {
                "--gauge-bg": "#e0e0e0",
                "--gauge-colors": "red",
                "--gauge-max-value": 100,
                "--gauge-size": "68px",
                "--gauge-trend-color": "",
                "--gauge-value": 32,
                "--stroke-dash": 60.31857894892402,
                "--stroke-dash-array": 188.49555921538757,
              }
            }
          >
            <circle
              className="iot--gauge-bg"
              cx={34}
              cy={34}
              r={30}
            />
            <circle
              className="iot--gauge-fg"
              cx={34}
              cy={34}
              r={30}
            />
            <text
              className="iot--gauge-value iot--gauge-value__centered iot--gauge-value-lg"
              id="gauge-label"
              textAnchor="middle"
              x={34}
              y={42}
            >
              <tspan>
                32
              </tspan>
              <tspan>
                %
              </tspan>
            </text>
          </svg>
          <div
            className="iot--gauge-trend iot--gauge-trend__down"
          >
            <p
              style={
                Object {
                  "--gauge-trend-color": "",
                }
              }
            >
              23%
            </p>
          </div>
          <svg
            aria-labelledby="gauge-label"
            className="iot--gauge"
            percent="0"
            style={
              Object {
                "--gauge-bg": "#e0e0e0",
                "--gauge-colors": "#f1c21b",
                "--gauge-max-value": 100,
                "--gauge-size": "68px",
                "--gauge-trend-color": "",
                "--gauge-value": 74,
                "--stroke-dash": 139.4867138193868,
                "--stroke-dash-array": 188.49555921538757,
              }
            }
          >
            <circle
              className="iot--gauge-bg"
              cx={34}
              cy={34}
              r={30}
            />
            <circle
              className="iot--gauge-fg"
              cx={34}
              cy={34}
              r={30}
            />
            <text
              className="iot--gauge-value iot--gauge-value__centered iot--gauge-value-lg"
              id="gauge-label"
              textAnchor="middle"
              x={34}
              y={42}
            >
              <tspan>
                74
              </tspan>
              <tspan>
                %
              </tspan>
            </text>
          </svg>
          <div
            className="iot--gauge-trend iot--gauge-trend__up"
          >
            <p
              style={
                Object {
                  "--gauge-trend-color": "",
                }
              }
            >
              12%
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
